--- a/demo13_pratise/src/main/resources/application.yml
+++ b/demo13_pratise/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/db1?serverTimeZone=UTC
+      url: jdbc:mysql://localhost:3306/money?serverTimeZone=UTC
       username: root
       password: 2566
 
